# agent-audit

./: .gitleaks.toml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  secret-scan.yml  security.yml
scripts/: stripe_setup_agent_lint.py
src/agent_audit/: __init__.py  __main__.py  cli.py  comparator.py  config.py  estimator.py  exceptions.py  formatters.py  gates.py  licensing.py  linter.py  models.py  pricing.py
src/agent_audit/data/: providers.yaml
src/agent_audit/parsers/: __init__.py  crewai.py  generic.py  gorgon.py  langchain.py
src/agent_audit/rules/: __init__.py  budget.py  efficiency.py  resilience.py  security.py
src/agent_lint/: __init__.py  __main__.py  cli.py  comparator.py  config.py  estimator.py  exceptions.py  formatters.py  gates.py  licensing.py  linter.py  models.py  pricing.py
src/agent_lint/data/: providers.yaml
src/agent_lint/parsers/: __init__.py  crewai.py  generic.py  gorgon.py  langchain.py
src/agent_lint/rules/: __init__.py  budget.py  efficiency.py  resilience.py  security.py
tests/: conftest.py  test_cli.py  test_comparator.py  test_estimator.py  test_formatters.py  test_gates.py  test_licensing.py  test_licensing_server.py  test_linter.py  test_models.py  test_parsers.py  test_pricing.py  test_rules.py
